# zap-stream-app

./: .dockerignore  .drone.yaml  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  android.sh  debian.sh  manifest.yaml
src/: android.rs  app.rs  lib.rs  link.rs  login.rs  main.rs  note_ref.rs  note_store.rs  note_util.rs  note_view.rs  profiles.rs  stream_info.rs  sub.rs  theme.rs  widget.rs  zap.rs
src/route/: home.rs  login.rs  mod.rs  profile.rs  stream.rs
src/services/: ffmpeg_loader.rs  image_cache.rs  mod.rs  ndb_wrapper.rs  profile.rs  query.rs
src/widgets/: avatar.rs  button.rs  chat.rs  chat_message.rs  chat_zap.rs  header.rs  mod.rs  pill.rs  placeholder_rect.rs  profile.rs  stream.rs  stream_list.rs  stream_player.rs  stream_tile.rs  stream_title.rs  text_input.rs  username.rs  video_placeholder.rs  write_chat.rs  zap.rs
