[package]
name = "zap_stream_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
tokio = { version = "1.40.0", features = ["fs", "rt-multi-thread", "rt"] }
egui = { version = "0.29.1" }
eframe = { version = "0.29.1", default-features = false, features = ["glow", "wgpu", "wayland", "x11", "android-native-activity"] }
nostrdb = { git = "https://github.com/damus-io/nostrdb-rs", version = "0.3.4" }
nostr-sdk = { version = "0.35.0", features = ["all-nips"] }
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
egui_inbox = "0.6.0"
bech32 = "0.11.0"
libc = "0.2.158"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"
anyhow = "1.0.89"
async-trait = "0.1.83"
sha2 = "0.10.8"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls-native-roots"] }
itertools = "0.13.0"

egui-video = { git = "https://github.com/v0l/egui-video.git", rev = "396d0041b437d2354f7a5d4e61c8ce33a69eb3b2" }
#egui-video = { path = "../egui-video" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
android-activity = { version = "0.6.0", features = ["native-activity"] }
winit = { version = "0.30.5", features = ["android-native-activity"] }