[package]
name = "zap_stream_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
tokio = { version = "1.40.0", features = ["fs", "rt-multi-thread", "rt"] }
egui = { version = "0.29.1" }
nostrdb = { git = "https://github.com/damus-io/nostrdb-rs", branch = "master" }
nostr-sdk = { version = "0.35.0", features = ["all-nips"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
egui_inbox = "0.6.0"
bech32 = "0.11.0"
libc = "0.2.158"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"
anyhow = "^1.0.91"
async-trait = "0.1.83"
sha2 = "0.10.8"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls-native-roots"] }
itertools = "0.13.0"
lru = "0.12.5"
resvg = { version = "0.44.0", default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["hex"] }

egui-video = { git = "https://github.com/v0l/egui-video.git", rev = "bb3f6b83ba3a0619b1b9de0d4da88acb7fafd257" }
#egui-video = { path = "../egui-video" }

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.29.1" }

[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.29.1", features = ["android-native-activity"] }
android_logger = "0.14.1"
android-activity = { version = "0.6.0" }
winit = { version = "0.30.5" }
android-ndk-sys = "0.2.0"
