[package]
name = "zap_stream_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []

[dependencies]
tokio = { version = "1.40.0", features = ["fs", "rt-multi-thread", "rt"] }
egui = { version = "0.29.1", default-features = false, features = [] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
bech32 = "0.11.0"
anyhow = "^1.0.91"
itertools = "0.14.0"
serde = { version = "1.0.214", features = ["derive"] }
directories = "5.0.1"
egui-video = { git = "https://github.com/v0l/egui-video.git", rev = "d2ea3b4db21eb870a207db19e4cd21c7d1d24836" }
egui_qr = { git = "https://git.v0l.io/Kieran/egui_qr.git", rev = "f9cf52b7eae353fa9e59ed0358151211d48824d1" }

# notedeck stuff
nostr = { version = "0.37.0", default-features = false, features = ["std", "nip49", "nip57"] }
nostrdb = { git = "https://github.com/damus-io/nostrdb-rs", rev = "2111948b078b24a1659d0bd5d8570f370269c99b" }
notedeck-chrome = { git = "https://github.com/damus-io/notedeck", rev = "06417ff69e772f24ffd7fb2b025f879463d8c51f", package = "notedeck_chrome" }
notedeck = { git = "https://github.com/damus-io/notedeck", rev = "06417ff69e772f24ffd7fb2b025f879463d8c51f", package = "notedeck" }
enostr = { git = "https://github.com/damus-io/notedeck", rev = "06417ff69e772f24ffd7fb2b025f879463d8c51f", package = "enostr" }
poll-promise = "0.3.0"
ehttp = "0.5.0"
egui-modal = "0.5.0"
icu = "1.5.0"
icu_decimal = "1.5.0"
fixed_decimal = "0.5.6"
lnurl-rs = { version = "0.9.0", default-features = false }

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.29.1" }

[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.29.1", features = ["android-native-activity"] }
android_logger = "0.14.1"
android-activity = { version = "0.6.0" }
winit = { version = "0.30.5" }
android-ndk-sys = "0.2.0"
